# HiuraMovie

./: .env.example  Cargo.toml  Makefile  Readme.md  docker-compose.yml
migrations/: 20251225153000_init_auth.sql  20251225193000_create_genres_table.sql  20251225204500_create_content_tables.sql  20251226000000_add_subtitle_url.sql  20251226120000_fix_content_genres_pk.sql  20251226123000_explicitly_drop_not_null.sql
scripts/: dev.sh  migrate.sh  seed.sql
src/: app.rs  docs.rs  main.rs  routes.rs  state.rs
src/common/: mod.rs  response.rs  security.rs  upload.rs
src/config/: env.rs  mod.rs  settings.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: pool.rs
src/infrastructure/queue/: rabbitmq.rs
src/infrastructure/redis/: client.rs
src/infrastructure/storage/: s3.rs
src/middleware/: auth.rs  mod.rs  role.rs
src/modules/: mod.rs
src/modules/auth/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/catalog/: mod.rs
src/modules/content/: dto.rs  events.rs  handler.rs  mod.rs  model.rs  repository.rs  service.rs  stream_handler.rs
src/modules/genre/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/playback/: mod.rs
src/modules/progress/: mod.rs
src/modules/user/: mod.rs
src/workers/: mod.rs  transcoder.rs
