[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "ws"] }
axum-extra = "0.12.2"
axum-range = "1.0.0"

tokio = { version = "1.48.0", features = ["full"] }

tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip", "set-header", "limit"] }
tower-cookies = "0.11.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19", features = ["v4", "serde"] }
time = { version = "0.3.44", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }

argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9.2"
cookie = "0.18.1"

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros"] }

redis = { version = "0.27", features = ["tokio-comp"] }
lapin = "3.7.2"
async-channel = "2.5.0"
cron = "0.15.0"

aws-sdk-s3 = "1.117.0"
bytes = "1.11.0"
mime = "0.3.17"
url = "2.5.7"

tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
